--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,69 @@
-/*
+.button-container button {
+    flex: 1;
+    margin-right: 5px;
+    padding: 10px;
+    border: none;
+    background-color: var(--interactive-bg);
+    color: var(--interactive-text);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
+.button-container button:last-child {
+    margin-right: 0;
+}
 
-If your plugin does not need CSS, delete this file.
+.button-container button:hover {
+    background-color: var(--interactive-hover);
+}
 
-*/
+.setting-container label {
+    font-weight: bold;
+}
+
+.setting-container input {
+    padding: 5px;
+    border: 1px solid var(--background-modifier-border);
+    border-radius: 5px;
+}
+
+.mnemosyne-select-container select {
+    width: 100%;
+    height: 200px; /* Adjust as needed */
+    padding: 5px;
+    border: 1px solid var(--background-modifier-border);
+    border-radius: 5px;
+    background-color: var(--background-primary);
+    color: var(--text-normal);
+    font-size: var(--font-medium);
+}
+
+/* Grid container for tag buttons */
+.mnemosyne-button-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-bottom: 20px;
+}
+
+/* Tag button styling */
+.tag-button {
+    flex: 1 1 auto;
+    padding: 5px 10px;
+    border: 1px solid var(--background-modifier-border);
+    border-radius: 5px;
+    background-color: var(--background-primary);
+    color: var(--text-normal);
+    cursor: pointer;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* Selected tag button styling */
+.tag-button-selected {
+    background-color: var(--interactive-accent);
+    color: var(--text-on-accent);
+}
